bibtex file initial

--- a/references.bib
+++ b/references.bib
@@ -224,3 +224,70 @@
     journal={Google},
     publisher={Google}
 }
+
+@article{Chan2024,
+   abstract = {Large Language Models (LLMs) exhibit remarkable capabilities but are prone to generating inaccurate or hallucinatory responses. This limitation stems from their reliance on vast pretraining datasets, making them susceptible to errors in unseen scenarios. To tackle these challenges, Retrieval-Augmented Generation (RAG) addresses this by incorporating external, relevant documents into the response generation process, thus leveraging non-parametric knowledge alongside LLMs' in-context learning abilities. However, existing RAG implementations primarily focus on initial input for context retrieval, overlooking the nuances of ambiguous or complex queries that necessitate further clarification or decomposition for accurate responses. To this end, we propose learning to Refine Query for Retrieval Augmented Generation (RQ-RAG) in this paper, endeavoring to enhance the model by equipping it with capabilities for explicit rewriting, decomposition, and disambiguation. Our experimental results indicate that our method, when applied to a 7B Llama2 model, surpasses the previous state-of-the-art (SOTA) by an average of 1.9\% across three single-hop QA datasets, and also demonstrates enhanced performance in handling complex, multi-hop QA datasets. Our code is available at https://github.com/chanchimin/RQ-RAG.},
+   author = {Chi-Min Chan and Chunpu Xu and Ruibin Yuan and Hongyin Luo and Wei Xue and Yike Guo and Jie Fu},
+   month = {3},
+   title = {RQ-RAG: Learning to Refine Queries for Retrieval Augmented Generation},
+   url = {http://arxiv.org/abs/2404.00610},
+   year = {2024}
+}
+
+@article{Setty2024,
+   abstract = {The effectiveness of Large Language Models (LLMs) in generating accurate responses relies heavily on the quality of input provided, particularly when employing Retrieval Augmented Generation (RAG) techniques. RAG enhances LLMs by sourcing the most relevant text chunk(s) to base queries upon. Despite the significant advancements in LLMs' response quality in recent years, users may still encounter inaccuracies or irrelevant answers; these issues often stem from suboptimal text chunk retrieval by RAG rather than the inherent capabilities of LLMs. To augment the efficacy of LLMs, it is crucial to refine the RAG process. This paper explores the existing constraints of RAG pipelines and introduces methodologies for enhancing text retrieval. It delves into strategies such as sophisticated chunking techniques, query expansion, the incorporation of metadata annotations, the application of re-ranking algorithms, and the fine-tuning of embedding algorithms. Implementing these approaches can substantially improve the retrieval quality, thereby elevating the overall performance and reliability of LLMs in processing and responding to queries.},
+   author = {Spurthi Setty and Harsh Thakkar and Alyssa Lee and Eden Chung and Natan Vidra},
+   month = {8},
+   title = {Improving Retrieval for RAG based Question Answering Models on Financial Documents},
+   url = {http://arxiv.org/abs/2404.07221},
+   year = {2024}
+}
+
+@misc{GoogleBigQuery,
+    url={https://cloud.google.com/bigquery/docs},
+    journal={Google},
+    publisher={Google}
+} 
+
+@misc{GoogleCloudRunService,
+    url={https://cloud.google.com/run/docs/overview/what-is-cloud-run#cloud_run_services},
+    journal={Google},
+    publisher={Google}
+}
+
+@misc{DSGVO_2024,
+    url={https://dsgvo-gesetz.de/},
+    journal={Datenschutz-Grundverordnung (DSGVO)},
+    year={2024},
+    month={Nov}
+}
+
+@misc{GoogleEmbedding001,
+    url={https://ai.google.dev/gemini-api/docs/embeddings},
+    journal={Google},
+    publisher={Google}
+}
+
+@article{Baligodugula2025,
+    author = {Vishnu Vardhan Baligodugula and Fathi Amsaad},
+    month = {7},
+    title = {Unsupervised Learning: Comparative Analysis of Clustering Techniques on High-Dimensional Data},
+    url = {http://arxiv.org/abs/2503.23215},
+    year = {2025},
+    journal = {}
+}
+
+@misc{GoogleGeminiPricing,
+    url={https://ai.google.dev/gemini-api/docs/pricing},
+    journal={Google},
+    publisher={Google}
+}
+
+@article{McInnes2020,
+   abstract = {UMAP (Uniform Manifold Approximation and Projection) is a novel manifold learning technique for dimension reduction. UMAP is constructed from a theoretical framework based in Riemannian geometry and algebraic topology. The result is a practical scalable algorithm that applies to real world data. The UMAP algorithm is competitive with t-SNE for visualization quality, and arguably preserves more of the global structure with superior run time performance. Furthermore, UMAP has no computational restrictions on embedding dimension, making it viable as a general purpose dimension reduction technique for machine learning.},
+   author = {Leland McInnes and John Healy and James Melville},
+   month = {9},
+   title = {UMAP: Uniform Manifold Approximation and Projection for Dimension Reduction},
+   url = {http://arxiv.org/abs/1802.03426},
+   year = {2020}
+}
