--- a/thesis.tex
+++ b/thesis.tex
@@ -319,17 +319,17 @@ To provide a basis for further investigation, this section describes the feature
 \subsection{System Architecture and Technology Stack}
 The system is deployed on the Google Cloud Platform (GCP) \parencite{GoogleCloudDocumentation} and utilizes Vertex AI Search \parencite{GoogleVertexAISearch} for the initial document retrieval from its knowledge base. The relevance of the retrieved documents is subsequently optimized by the Vertex AI Reranker \parencite{GoogleReranker}. For the generation component, the system is capable of integrating various LLMs through the LangChain framework \parencite{LangChain}. Given its deployment on GCP, Google's Gemini models \parencite{GoogleGemini} are typically employed for response generation.
 
-A central architectural feature of the system is the implementation of distinct \textbf{Use Cases}. This allows the system to provide context-aware responses by augmenting the generation prompt with use-case-specific information, such as a specialized glossary or other supplementary data like a use-case-specific tonality. Each Use Case is associated with a specific selection of \textbf{Knowledge Assets}, which are custom compilations of \textbf{Knowledge Sources}. A Knowledge Source contains information on a particular topic and is technically linked to a Datastore in Vertex AI Search, which performs the underlying retrieval. The user requests are organized as follows: A user can start a thread within a use case. This thread can contain multiple chats that are linked to it. The user's requests are connected to a chat in turn. A use case and the data used in a use case is managed by a so called use case admin who is a trained employee of the company using the RAG system.
+A central architectural feature of the system is the implementation of distinct \textbf{Use Cases} that are customized units capable of handling requests to a specified set of data. The customization allows the system to provide context-aware responses by augmenting the generation prompt with use-case-specific information, such as a specialized glossary or other supplementary data like a use-case-specific tonality. Each Use Case is associated with a specific selection of \textbf{Knowledge Assets}, which are custom compilations of \textbf{Knowledge Sources}. A Knowledge Source contains information on a particular topic and is technically linked to a Datastore in Vertex AI Search, which performs the underlying retrieval. The user requests are organized as follows: A user can start a thread within a use case. This thread can contain multiple chats that are linked to it. The user's requests are connected to a chat in turn. A use case and the data used in a use case is managed by a so called use case admin who is a trained employee of the company using the RAG system.
 
 \subsection{Retrieval and Query Enhancement Features}
-To increase the quality of the generated answers, the system incorporates several features to enhance the retrieval process:
+The system incorporates several advanced features to enhance the retrieval process:
 
 \begin{itemize}
-    \item \textbf{Query Splitting:} The user's search query is semantically decomposed into multiple sub-queries. A separate retrieval process is executed for each sub-query, thereby improving the comprehensiveness and quality of the search results.
+    \item \textbf{Query Splitting:} The user's search query is semantically decomposed into multiple sub-queries. A separate retrieval process is executed for each sub-query to ensure every semantic aspect of the user's query is covered \parencite{Chan2024}.
     
-    \item \textbf{Query Reformulation:} The system supports the reformulation of queries, which enables more effective handling of follow-up questions that are related to previous questions and generally leads to an increase in retrieval quality.
+    \item \textbf{Query Reformulation:} The system supports the reformulation of user queries to add necessary context, e.g., from previous questions \parencite{Setty2024}.
     
-    \item \textbf{Metadata Filtering:} The search performed by Vertex AI Search can be refined by applying a metadata filter. This allows for the retrieval to be constrained to only those documents that match specific attributes enhancing the retrieval performance since the retrieval process can operate on a smaller search space.
+    \item \textbf{Metadata Filtering:} The search performed by Vertex AI Search can be refined by applying a metadata filter. This allows for the retrieval to be constrained to only those documents that match specific attributes \parencite{Setty2024}.
 \end{itemize}
 
 \subsection{User Interface and Interaction Features}
@@ -347,17 +347,17 @@ The system provides a range of interactive features to enhance the user experien
     \item \textbf{Quick Actions:} The system offers "Quick Actions," which are clickable shortcuts that allow users to perform subsequent tasks with the generated information, such as creating an email or generating a summary.
 \end{itemize}
 \section{Software features}
-This chapter presents the results of the developer workshops, namely the resulting concepts and their contribution to the GenAI success evaluation framework, as well as the prioritization and feedback by the developer team. Each concept is explained in terms of the quality dimensions that it can be used to measure. While many concepts allow Use Case administrators to improve assignments across multiple quality dimensions, they are primarily assigned to the dimension for which they are most suitable.
+This chapter presents the results of the developer workshops, namely the resulting concepts and their contribution to the GenAI success evaluation framework, as well as the prioritization and feedback by the developer team. Each concept is explained in terms of the quality dimensions that it can be used to measure. While many concepts allow Use Case administrators to improve the system across multiple quality dimensions, they are assigned to the dimension for which they are most suitable.
 \subsection{Mostly system quality related concepts}
 \subsubsection{Response Time Measurement}
-The first concept for determining the system quality of the RAG application is the measurement of its response time, defined as the duration from the submission of a user's query to the delivery of the complete answer. For a comprehensive analysis, this measurement should incorporate not only the raw duration but also key system factors to assess their impact.These factors include the specific language model (LLM) being used and whether features such as Query Splitting or Query Reformulation were activated for the request. Using this feature, Use Case administrators can identify performance trends and retrospectively evaluate the impact of their own decisions on the response times of the RAG system. Furthermore, it enables them to assess better how various system factors affect the response time. These insights can, in turn, be used to train employees on the effective use of the system, for example, by providing better guidance on the performance implications of choosing a particular language model. By evaluating the response time of the system, Use Case administrators can draw conclusions on the performance of it and whether the \textit{technological resources} provided are suitable for the system, which is a key aspect of \textit{system quality}.
+The first concept for determining the system quality of the RAG application is the measurement of its response time, defined as the duration from the submission of a user's query to the delivery of the complete answer. For a comprehensive analysis, this measurement should incorporate not only the raw duration but also key system factors to assess their impact. These factors include the specific language model (LLM) being used and whether features such as Query Splitting or Query Reformulation were activated for the request. Using this feature, Use Case administrators can identify performance trends and retrospectively evaluate the impact of their own decisions on the response times of the RAG system. Furthermore, it enables them to assess better how various system factors affect the response time. These insights can, in turn, be used to train employees on the effective use of the system, for example, by providing better guidance on the performance implications of choosing a particular language model. By evaluating the response time of the system, Use Case administrators can draw conclusions on the performance of it and whether the \textit{technological resources} provided are suitable for the system, which is a key aspect of \textit{system quality}.
 
 For the visualization of this data, a time-series diagram is proposed. The x-axis would represent the time and the y-axis the measured response time. To improve readability and highlight long-term developments, the chart should be smoothed, for instance, by displaying daily averages. The interface should also include interactive filters that allow for the inclusion of the different system factors. These filters would enable users to display data subsets, such as showing only the response times associated with a specific LLM or with Query Splitting enabled/disabled.
 
 During the workshop, the development team assigned a \textbf{medium priority} to this feature. In their feedback, they noted that while the feature would be straightforward to implement, they suspected that overall response times would not vary significantly. Therefore, they hypothesized that this analysis would likely not yield major conclusions.
 
 \subsubsection{Error Rate Monitoring}
-A second concept proposed to evaluate system quality focuses on monitoring error rates to assess system stability and reliability. The core metrics to be captured are the absolute count and the percentage of user queries that result in a system error. For a more granular analysis, these error metrics can be combined with the system factors (LLM selection and the activation state of Query Splitting and Reformulation) and with the different predefined error types and messages of the system. By analyzing the error rates of the system, Use Case administrators can conclude the overall stability of the system, which is yet another critical \textit{system quality metric}. By providing the development and operations team of the RAG application with insights about frequent errors, this feature partly contributes to the \textit{IS KM service quality} of the RAG system, as well, since service processes carried out by the vencor of the RAG system like fixing bugs are enhanced.
+A second concept proposed to evaluate system quality focuses on monitoring error rates to assess system stability and reliability. The core metrics to be captured are the absolute count and the percentage of user queries that result in a system error. For a more granular analysis, these error metrics can be combined with the system factors (LLM selection and the activation state of Query Splitting and Reformulation) and with the different predefined error types and messages of the system. By analyzing the error rates of the system, Use Case administrators can conclude the overall stability of the system, which is yet another critical \textit{system quality metric}. By providing the development and operations team of the RAG application with insights into frequent errors, this feature partly contributes to the \textit{IS KM service quality} of the RAG system, as well, since service processes carried out by the RAG system's vendor, such as bug fixes, are enhanced.
 
 The visualization proposed for these data is again a time-series diagram. The x-axis would represent time, while the y-axis would display the amount or percentage of system errors. The interface is designed to be interactive, featuring filtering options for both system factors and error types. This allows for detailed analysis, such as comparing the error rates of different language models or analyzing the impact of query splitting and query reformulation on error rates.
 
@@ -440,7 +440,7 @@ The last concept proposed for measuring service quality is "Knowledge Gap Detect
 
 For visualization, it is proposed to track the occurrences of these knowledge gap types over time and display them in a time-series diagram. The x-axis would represent time, while the y-axis would indicate the frequency of each gap type. This allows administrators to observe trends in knowledge gaps and identify if certain periods or topics are more prone to these issues.
 
-During the workshops, the development team assigned a \textbf{medium to high priority} to the "Knowledge gap detection" feature, specifically emphasizing its importance for analyzing system data. The ability to identify internal system knowledge gaps was considered crucial for pinpointing areas where the RAG mechanism or the underlying knowledge base need improvement. The mechanism for checking topic alignment -- whether topics "fit together" -- was discussed. The proposed approach involves utilizing existing topic modeling techniques or semantic similarity measures (e.g., cosine similarity of embeddings) to compare the topics extracted from user queries, retrieved documents, and knowledge assets. If the similarity score falls below a predefined threshold, a mismatch, and thus a potential gap, is flagged.
+During the workshops, the development team assigned a \textbf{medium to high priority} to the "Knowledge gap detection" feature, specifically emphasizing its importance for analyzing system data. The ability to identify internal system knowledge gaps was considered crucial for pinpointing areas where the RAG mechanism or the underlying knowledge base need improvement. The mechanism for checking topic alignment -- whether topics "fit together" -- was discussed. The proposal uses semantic similarity measures (e.g., cosine similarity of embeddings) to compare the topics extracted from user queries, retrieved documents, and knowledge assets. If the similarity score falls below a predefined threshold, a mismatch, and thus a potential gap, is flagged.
 \subsection{Implementation Roadmap}
 Finally, after discussion with the development team, the following roadmap for implementing the proposed software features was agreed upon:
 \begin{enumerate}
@@ -460,9 +460,9 @@ This roadmap was particularly important because it was clear from the beginning 
 \section{Description of the implemented software features}
 The following section describes how the software features were implemented in the RAG system. For each feature, the description will cover its integration into the user flow as well as its technical implementation.
 \subsection{Tracking system and GDPR compliance}
-The first thing we need to evaluate the user interactions is a tracking system to record them. The foundation of the tracking system developed during the thesis is BigQuery, a scalable, high-performance data warehouse solution from Google. As it is natively integrated into the Google Cloud Platform (GCP), it is well-suited for analyzing the application's user data.
+The first thing we need to evaluate the user interactions is a tracking system to record them. The foundation of the tracking system developed during the thesis is BigQuery \parencite{GoogleBigQuery}, a scalable, high-performance data warehouse solution from Google. As it is natively integrated into the Google Cloud Platform (GCP), it is well-suited for analyzing the application's user data.
 
-To record the data, a Google Cloud Run service is used, which receives data from the RAG application's Vue-based frontend via HTTP and writes it to BigQuery. These HTTP calls are executed asynchronously and in parallel with the rest of the application's requests. This ensures that the tracking process does not interfere with the performance or usability of the RAG application.
+To record the data, a Google Cloud Run service \parencite{GoogleCloudRunService} is used, which receives data from the RAG application's Vue-based frontend via HTTP and writes it to BigQuery. These HTTP calls are executed asynchronously and in parallel with the rest of the application's requests. This ensures that the tracking process does not interfere with the performance or usability of the RAG application.
 The foundation of the tracking system is Google's BigQuery, a scalable, high-performance data warehouse solution. As it is natively integrated into the Google Cloud Platform (GCP), it is well-suited for the analysis of user data.\\
 \\
 The tracking system supports the recording of the following interaction types:
@@ -483,7 +483,7 @@ The tracking system supports the recording of the following interaction types:
 \end{itemize}
 To maintain the context of a conversation, interactions belonging to a chat or thread within a Use Case are also tracked. In BigQuery, the chat is recorded as a "SessionChat" and the thread is recorded as a "Session". This structure makes it possible to determine which interactions were triggered within the same chat or thread.
 
-For compliance with GDPR (DSGVO) regulations, these chats and threads are pseudonymized. This means that pseudonymized IDs are used to prevent a chat or thread from being linked back to a specific user, removing the possibility of subsequent re-identification. Furthermore, a table was created containing a justification for why the recording is necessary for every single data point that is tracked to make the tracking system GDPR compliant.
+For compliance with GDPR (DSGVO) \parencite{DSGVO_2024} regulations, these chats and threads are pseudonymized. This means that pseudonymized IDs are used to prevent a chat or thread from being linked back to a specific user, removing the possibility of subsequent re-identification. Furthermore, a table was created containing a justification for why the recording is necessary for every single data point that is tracked to make the tracking system GDPR compliant.
 \subsection{Data flow and data preprocessing}
 \begin{figure}
     \centering
@@ -522,9 +522,9 @@ To determine the document quality metrics, the implementation uses the relevance
 The Topic Maps are presented to the user as a bubble plot. In contrast to the proposal from the workshop in the implemented visualization, each bubble represents an individual user question -- not a whole topic -- allowing for a more detailed overview. The position of each bubble in the chart is determined by its semantic meaning, with topically similar questions appearing closer together than dissimilar ones. Furthermore, the questions are thematically grouped using a clustering algorithm. Each cluster of questions is assigned a unique color on the chart and is displayed with a descriptive title in the legend. The dashboard allows administrators to filter the view by Use Case and date range, enabling them to analyze how the thematic composition of user queries changes over time. Tooltips are also available to show details for each individual question bubble.
 
 \subsubsection{Technical Implementation}
-The Topic Maps are generated during preprocessing by first embedding all user queries using the \texttt{gemini-embedding-001} model in its clustering mode. These embeddings are then clustered using the HDBSCAN algorithm. To achieve robust results across varying amounts of data, the input parameters for HDBSCAN, specifically \texttt{min\_cluster\_size} and \texttt{min\_samples}, are dynamically adjusted based on the total number of queries being analyzed. This adaptive approach ensures sensible clustering for both small and large datasets. The HDBSCAN algorithm is a good choice for this use case as it automatically determines the number of topics (clusters) and effectively isolates irrelevant queries as noise. This eliminates the need to pre-specify the number of clusters, a key limitation of methods like K-means, making it ideal for discovering topics in an exploratory way. To overcome the issue that HDBSCAN is not well-suited for high-dimensional data, t-SNE is applied before the HDBSCAN algorithm to reduce the dimensions beforehand.
+The Topic Maps are generated during preprocessing by first embedding all user queries using the \texttt{gemini-embedding-001} model in its clustering mode \parencite{GoogleEmbedding001}. These embeddings are then clustered using the HDBSCAN algorithm. To achieve robust results across varying amounts of data, the input parameters for HDBSCAN, specifically \texttt{min\_cluster\_size} and \texttt{min\_samples}, are dynamically adjusted based on the total number of queries being analyzed. This adaptive approach ensures sensible clustering for both small and large datasets. The HDBSCAN algorithm is a good choice for this use case as it automatically determines the number of topics (clusters) and effectively isolates irrelevant queries as noise. This eliminates the need to pre-specify the number of clusters, a key limitation of methods like K-means, making it ideal for discovering topics in an exploratory way \parencite{Baligodugula2025}. To overcome the issue that HDBSCAN is not well-suited for high-dimensional data, UMAP is applied before the HDBSCAN algorithm to reduce the dimensions beforehand.
 
-After clustering, a language model uses a prompt template to generate a descriptive title for each cluster based on a sample of its questions; this title is then displayed in the legend. Finally, to visualize the 3072-dimensional vectors produced by the embedding model, their dimensionality is reduced to two dimensions using the t-SNE technique, allowing them to be plotted on the 2D chart. The t-SNE algorithm is known to handle high-dimensional vectors well, which makes it a good choice in the case of high-dimensional embedding vectors compared to, for example PCA.
+After clustering, a language model uses a prompt template to generate a descriptive title for each cluster based on a sample of its questions; this title is then displayed in the legend. Finally, to visualize the 3072-dimensional vectors produced by the embedding model, their dimensionality is reduced to two dimensions using the UMAP again, allowing them to be plotted on the 2D chart. The UMAP algorithm is known to handle high-dimensional vectors well, which makes it a good choice in the case of high-dimensional embedding vectors compared to, for example PCA or t-SNE \parencite{McInnes2020}.
 The resulting clusters, cluster names and 2-dimensional coordinates stored in BigQuery can be requested by the frontend using the Cloud Run backend.
 \subsection{Task type analysis}
 \subsubsection{User flow}
@@ -578,9 +578,9 @@ To assess the financial impact of the implemented analytics features, a detailed
 Two primary scenarios were analyzed to understand the cost impact under different conditions:
 
 \begin{itemize}
-    \item \textbf{Scenario 1: Simple RAG Chain.} The baseline was a simple query using one call to the most suitable Gemini model for Question Answering (\texttt{Gemini-2.5-Pro}). The additional analytics features require one call to a lower-cost model (\texttt{Gemini-2.0-Flash}) for quality and task type evaluation, and one call to the embedding model (\texttt{Gemini-Embedding-001}) for topic map analysis. In this scenario, the relative cost increase was calculated to be \textbf{24\%}.
+    \item \textbf{Scenario 1: Simple RAG Chain.} The baseline was a simple query using one call to the most suitable Gemini model for Question Answering (\texttt{Gemini-2.5-Pro}). The additional analytics features require one call to a lower-cost model (\texttt{Gemini-2.0-Flash}) for quality and task type evaluation, and one call to the embedding model (\texttt{Gemini-Embedding-001}) for topic map analysis. In this scenario, the relative cost increase was calculated to be \textbf{24\%} \parencite{GoogleGeminiPricing}.
 
-    \item \textbf{Scenario 2: Complex RAG Chain.} This scenario assumed a more advanced baseline chain that already included features like Query Reformulation and Splitting, which require several additional calls to smaller, faster models. When the same analytics features were added to this more expensive baseline, their relative cost increase was lower, calculated at approximately \textbf{18\%}.
+    \item \textbf{Scenario 2: Complex RAG Chain.} This scenario assumed a more advanced baseline chain that already included features like Query Reformulation and Splitting, which require several additional calls to smaller, faster models. When the same analytics features were added to this more expensive baseline, their relative cost increase was lower, calculated at approximately \textbf{18\%} \parencite{GoogleGeminiPricing}.
 \end{itemize}
 Detailed calculations can be found in the appendix.
 
